--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,6 +37,8 @@
   }
 }
 
+
+
 .baseColourPicker {
   margin: 2%;
   display: flex;
@@ -50,17 +52,36 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  height: 80dvh;
+  height: 70dvh;
   justify-content: center;
   align-items: center;
 }
 
 .colourCard { 
   width: 10dvw;
-  height: 100%;
+  height: 90%;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+
+.pure-modal-backdrop { 
+  div.codeExportModal {
+    width: 80dvw;
+    height: 60dvh;
+  }
+}
+
+
+#exportCodeSnippet {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+
+#exportCodeSnippet > code {
+  display: block;
 }
